--- a/.gitignore
+++ b/.gitignore
@@ -54,4 +54,4 @@ renv
 
 # This is a default output of the package calculations, better not to track it
 # by default
-rorm_classes.R
+rorm_models.R
