--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,10 @@ LazyData: true
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Imports: 
+    DBI,
+    logging,
+    R6,
+    RPostgres,
+    stringi,
+    stringr
