--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: rORM
 Type: Package
-Title: (PostgreSQL) Database Object Relational Mapper for R Language using `DBI` package as base.
+Title: Database Object Relational Mapper for R Language using DBI
 Version: 0.1.0
 Author: Benjamin Manns
 Maintainer: Benjamin Manns <benjamin.manns@capgemini.com>
-Description: The idea is simple: The `rORM` package give you the possibility to generate R 
-    code which provides `R6` objects for each DB table. This objects works as models
-    which can be used to perform basic CRUD operations on the DB. 
+Description: The rORM package give you the possibility to generate R code 
+    which provides R6 objects for each DB table. This objects works as models
+    which can be used to perform basic CRUD operations on the DB.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
